--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    buildToolsVersion '28.0.2'
 
     defaultConfig {
         minSdkVersion 19
@@ -16,6 +16,10 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -29,19 +33,19 @@ dependencies {
 //        exclude group: 'com.android.support', module: 'support-annotations'
 //    })
 //    testCompile 'junit:junit:4.12'
-    compile 'com.jaeger.statusbarutil:library:1.5.1'
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
 
 
-    compile 'com.android.support:recyclerview-v7:27.1.1'
-    compile 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation "com.android.support:support-fragment:27.1.1"
 
-    compile 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
 
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.android.support:cardview-v7:27.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
 
 
@@ -49,36 +53,39 @@ dependencies {
 //    compile 'com.android.support:percent:27.1.1'
 //    compile 'com.ashokvarma.android:bottom-navigation-bar:1.4.1'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //retrofit封装okhttp
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     //    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     //响应式编程
     //    compile 'io.reactivex:rxjava:1.1.9'
 
 //    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
 //    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxandroid:1.2.1'
 
     //json解析
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     //image
 //    compile 'com.github.bumptech.glide:glide:4.5.0'
 //    compile 'com.github.bumptech.glide:compiler:4.5.0'
 
 
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
-    compile 'com.uber.autodispose:autodispose:0.6.1'
-    compile 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
+    implementation 'com.uber.autodispose:autodispose:0.6.1'
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
 
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 
+//    compile 'com.caverock:androidsvg:1.2.1'
+    implementation 'com.caverock:androidsvg:1.2.1'
+//    implementation 'com.caverock:androidsvg-aar:1.3'
 }
 repositories {
     mavenCentral()
