--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 bin/
 gen/
 out/
-
+.idea/
 # Gradle files
 .gradle/
 build/
@@ -48,9 +48,9 @@ captures/
 .externalNativeBuild
 
 # Google Services (e.g. APIs or Firebase)
-google-services.json
+google-services.createGson
 
 # Freeline
 freeline.py
 freeline/
-freeline_project_description.json
+freeline_project_description.createGson
