--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
-
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.github.swant'
 
 
 android {
@@ -24,7 +26,7 @@ android {
 }
 
 dependencies {
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
 //        exclude group: 'com.android.support', module: 'support-annotations'
 //    })
@@ -42,8 +44,6 @@ dependencies {
     compile 'com.android.support:design:27.1.1'
     compile 'com.android.support:cardview-v7:27.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.1.2'
-
-
 
 //    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 //    compile 'com.android.support:percent:27.1.1'
