--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,22 @@
+
+repositories {
+
+    maven () { url "http://jcenter.bintray.com/" }
+//        maven { url "http://maven.aliyun.com/nexus/content/groups/public"}
+//        jcenter()
+
+//        google()
+    maven { url 'https://maven.google.com' }
+//        maven { url "https://dl.google.com/dl/android/maven2/" }
+
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://jitpack.io" }
+    mavenCentral()
+    mavenLocal()
+
+}
+
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 //apply plugin: 'com.github.dcendents.android-maven'
