--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    dependencies{
+        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.3.0"
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+    }
 
+}
 repositories {
 
     maven () { url "http://jcenter.bintray.com/" }
