--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,39 @@
-buildscript {
-    dependencies{
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
-//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.4"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.3.0"
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-    }
-
-}
-repositories {
-
-    maven () { url "http://jcenter.bintray.com/" }
-//        maven { url "http://maven.aliyun.com/nexus/content/groups/public"}
-//        jcenter()
-
-//        google()
-    maven { url 'https://maven.google.com' }
-//        maven { url "https://dl.google.com/dl/android/maven2/" }
-
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-    maven { url "https://jitpack.io" }
-    mavenCentral()
-    mavenLocal()
-
-}
+//buildscript {
+//    dependencies{
+//        classpath 'com.android.tools.build:gradle:3.3.0'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
+////        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.4"
+//        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.3.0"
+//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+//    }
+//
+//}
+//repositories {
+//
+//    maven () { url "http://jcenter.bintray.com/" }
+////        maven { url "http://maven.aliyun.com/nexus/content/groups/public"}
+////        jcenter()
+//
+////        google()
+//    maven { url 'https://maven.google.com' }
+////        maven { url "https://dl.google.com/dl/android/maven2/" }
+//
+//    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+//    maven { url "https://jitpack.io" }
+//    mavenCentral()
+//    mavenLocal()
+//
+//}
 
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
-apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.OoswantoO'
+//apply plugin: 'com.github.dcendents.android-maven'
+//group = 'com.github.OoswantoO'
 
+apply plugin: 'maven'
 
 android {
     compileSdkVersion 27
@@ -69,9 +70,7 @@ dependencies {
 //    implementation 'com.android.support:appcompat-v7:27.1.1'
     api 'com.android.support:support-annotations:27.1.1'
     api "com.android.support:support-fragment:27.1.1"
-
     api 'com.android.support:support-v4:27.1.1'
-
     api 'com.android.support:design:27.1.1'
 
 //    implementation 'com.android.support:cardview-v7:27.1.1'
@@ -110,6 +109,16 @@ dependencies {
     api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
 
 
+}
+
+uploadArchives{
+    repositories.mavenDeployer{
+        // 配置本地仓库路径，项目根目录下的repository目录中
+        repository(url: uri('../repository'))
+        pom.groupId = "com.github.OoswantoO"// 唯一标识（通常为模块包名，也可以任意）
+        pom.artifactId = "kbaselib" // 项目名称（通常为类库模块名称，也可以任意）
+        pom.version = "1.1.2" // 版本号
+    }
 }
 //repositories {
 //    mavenCentral()
