--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="edu.tjrac.swant.kotlin.baselib">
-
+    <!--android:label="@string/app_name"-->
     <application
-        android:label="@string/app_name"
         >
         <activity android:name=".common.BaseWebViewActivity"></activity>
     </application>
