--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 //    implementation 'com.android.support:recyclerview-v7:27.1.1'
 //    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 
-//    implementation 'com.android.support:appcompat-v7:27.1.1'
+    api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.android.support:support-annotations:27.1.1'
     api "com.android.support:support-fragment:27.1.1"
     api 'com.android.support:support-v4:27.1.1'
