--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 
     api 'com.uber.autodispose:autodispose:0.6.1'
     api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
 
 }
