--- a/build.gradle
+++ b/build.gradle
@@ -25,61 +25,63 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
-//    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-//    testCompile 'junit:junit:4.12'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+
+    //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+
+    //        exclude group: 'com.android.support', module: 'support-annotations'
+
+    //    })
+
+    //    testCompile 'junit:junit:4.12'
     api 'com.jaeger.statusbarutil:library:1.5.1'
 
+    //    implementation 'com.android.support:recyclerview-v7:27.1.1'
 
-//    implementation 'com.android.support:recyclerview-v7:27.1.1'
-//    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-
+    //    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.android.support:support-annotations:27.1.1'
-    api "com.android.support:support-fragment:27.1.1"
+    api 'com.android.support:support-fragment:27.1.1'
 
-    api 'com.android.support:support-v4:27.1.1'
-    api 'com.android.support:design:27.1.1'
+    //    implementation 'com.android.support:cardview-v7:27.1.1'
 
-//    implementation 'com.android.support:cardview-v7:27.1.1'
-//    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    //    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
-//    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-//    compile 'com.android.support:percent:27.1.1'
-//    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
+    //    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    //    compile 'com.android.support:percent:27.1.1'
+
+    //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //retrofit封装okhttp
     api 'com.squareup.retrofit2:retrofit:2.3.0'
+
     //    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
+
     //响应式编程
+
     //    compile 'io.reactivex:rxjava:1.1.9'
 
-//    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
-//    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
+
+    //    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     api 'io.reactivex:rxandroid:1.2.1'
 
     //json解析
     api 'com.google.code.gson:gson:2.8.2'
 
     //image
-//    compile 'com.github.bumptech.glide:glide:4.5.0'
-//    compile 'com.github.bumptech.glide:compiler:4.5.0'
 
 
+    //    compile 'com.github.bumptech.glide:compiler:4.5.0'
     api 'com.squareup.okhttp3:okhttp:3.8.1'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-
     api 'com.uber.autodispose:autodispose:0.6.1'
     api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-
 }
 //repositories {
 //    mavenCentral()
