--- a/build.gradle
+++ b/build.gradle
@@ -53,8 +53,22 @@ dependencies {
 
     //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //响应式编程
+        api 'io.reactivex:rxjava:1.3.0'
+    api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
 
+    //json解析
+    api 'com.google.code.gson:gson:2.8.2'
+
+    //image
+
+
+    //    compile 'com.github.bumptech.glide:compiler:4.5.0'
+    api 'com.squareup.okhttp3:okhttp:3.8.1'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     api 'com.uber.autodispose:autodispose:0.6.1'
     api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
