--- a/build.gradle
+++ b/build.gradle
@@ -44,11 +44,14 @@ dependencies {
     //    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     //    compile 'com.android.support:percent:27.1.1'
     //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //响应式编程
     api 'io.reactivex:rxjava:1.3.0'
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //retrofit封装okhttp
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    //    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'io.reactivex:rxandroid:1.2.1'
     //    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     //    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     //json解析
@@ -57,8 +60,11 @@ dependencies {
     //    compile 'com.github.bumptech.glide:compiler:4.5.0'
     api 'com.squareup.okhttp3:okhttp:3.8.1'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    api 'com.uber.autodispose:autodispose:0.6.1'
-    api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
+
+//    api 'com.uber.autodispose:autodispose:0.6.1'
+//    api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 //repositories {
 //    mavenCentral()
