--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,11 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-
+    sourceSets {
+        main.res.srcDirs += 'src/main/res_ui'
+//        main.assets.srcDirs += 'src/main/assets_tensorflow'
+        main.jniLibs.srcDirs = ['libs']
+    }
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 27
