--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     api 'com.google.code.gson:gson:2.8.2'
     //image
     //    compile 'com.github.bumptech.glide:compiler:4.5.0'
+    api "com.github.bumptech.glide:glide:$glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
     api 'com.squareup.okhttp3:okhttp:3.8.1'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
