--- a/build.gradle
+++ b/build.gradle
@@ -3,36 +3,28 @@ apply plugin: 'kotlin-android'
 //apply plugin: 'com.github.dcendents.android-maven'
 //group = 'com.github.swant'
 
-
 android {
     compileSdkVersion compile_version
-    buildToolsVersion build_version
+    buildToolsVersion tools_version
     sourceSets {
         main.res.srcDirs += 'src/main/res_ui'
-        main.res.srcDirs += 'src/main/res_biubiu'
 //        main.assets.srcDirs += 'src/main/assets_tensorflow'
         main.jniLibs.srcDirs = ['libs']
     }
     defaultConfig {
-        minSdkVersion min_version
+        minSdkVersion 19
         targetSdkVersion target_version
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        versionCode 1
+//        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
-//    buildTypes {
-//        release {
-//            useProguard proguard
-//            minifyEnabled proguard
-//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//        }
-//        debug {
-//            useProguard proguard
-//            minifyEnabled proguard
-//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//        }
-//    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
@@ -41,48 +33,41 @@ dependencies {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    })
     //    testCompile 'junit:junit:4.12'
-//    api 'com.jaeger.statusbarutil:library:1.5.1'
+    api 'com.jaeger.statusbarutil:library:1.5.1'
+
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:support-annotations:$support_version"
+    implementation "com.android.support:support-fragment:$support_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     //    implementation 'com.android.support:recyclerview-v7:27.1.1'
     //    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'com.google.android.material:material:1.0.0'
-
-    api 'androidx.appcompat:appcompat:1.0.0'
-    api 'androidx.annotation:annotation:1.0.0'
-    api 'androidx.fragment:fragment:1.0.0'
-
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     //    implementation 'com.android.support:cardview-v7:27.1.1'
     //    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    //    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     //    compile 'com.android.support:percent:27.1.1'
+
     //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
+
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    api 'jp.wasabeef:glide-transformations:3.0.1'
     //响应式编程
-    api 'io.reactivex:rxjava:1.3.0'
+//    api 'io.reactivex:rxjava:1.3.0'
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
-    //retrofit封装okhttp
-    api 'com.squareup.retrofit2:retrofit:2.3.0'
-    //    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    api 'io.reactivex:rxandroid:1.2.1'
-    //    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
-    //    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    api 'com.squareup.okhttp3:okhttp:3.8.1'
-    api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     //json解析
-    api 'com.google.code.gson:gson:2.8.2'
+    api "com.google.code.gson:gson:$gson"
     //image
     //    compile 'com.github.bumptech.glide:compiler:4.5.0'
-    api "com.github.bumptech.glide:glide:$glide"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
+    api 'com.squareup.okhttp3:okhttp:3.8.1'
+    api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
-
-
+    //在lifecycler onDestory 时自动解除订阅
 //    api 'com.uber.autodispose:autodispose:0.6.1'
 //    api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 //repositories {
 //    mavenCentral()
