--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,41 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="edu.tjrac.swant.baselib">
     <!--android:label="@string/app_name"-->
+<!--    &lt;!&ndash; 危险权限 start &ndash;&gt;-->
+<!--    &lt;!&ndash;PHONE&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>-->
+<!--    <uses-permission android:name="android.permission.CALL_PHONE"/>-->
+<!--    <uses-permission android:name="android.permission.READ_CALL_LOG"/>-->
+<!--    <uses-permission android:name="android.permission.ADD_VOICEMAIL"/>-->
+<!--    <uses-permission android:name="android.permission.WRITE_CALL_LOG"/>-->
+<!--    <uses-permission android:name="android.permission.USE_SIP"/>-->
+<!--    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>-->
+<!--    &lt;!&ndash;CALENDAR&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.READ_CALENDAR"/>-->
+<!--    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>-->
+<!--    &lt;!&ndash;CAMERA&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.CAMERA"/>-->
+<!--    &lt;!&ndash;CONTACTS&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.READ_CONTACTS"/>-->
+<!--    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>-->
+<!--    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>-->
+<!--    &lt;!&ndash;LOCATION&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
+<!--    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>-->
+<!--    &lt;!&ndash;MICROPHONE&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.RECORD_AUDIO"/>-->
+<!--    &lt;!&ndash;SENSORS&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.BODY_SENSORS"/>-->
+<!--    &lt;!&ndash;SMS&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.SEND_SMS"/>-->
+<!--    <uses-permission android:name="android.permission.RECEIVE_SMS"/>-->
+<!--    <uses-permission android:name="android.permission.READ_SMS"/>-->
+<!--    <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH"/>-->
+<!--    <uses-permission android:name="android.permission.RECEIVE_MMS"/>-->
+<!--    &lt;!&ndash;STORAGE&ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
+<!--    &lt;!&ndash; 危险权限 Permissions end &ndash;&gt;-->
     <application
         >
         <activity android:name=".common.base.BaseWebViewActivity"></activity>
