--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation "com.android.support:support-fragment:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
+
     //    implementation 'com.android.support:recyclerview-v7:27.1.1'
     //    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     //    implementation 'com.android.support:cardview-v7:27.1.1'
