--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,14 @@ dependencies {
     //    testCompile 'junit:junit:4.12'
     api 'com.jaeger.statusbarutil:library:1.5.1'
 
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:support-annotations:$support_version"
-    implementation "com.android.support:support-fragment:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+//    api "com.android.support:appcompat-v7:$support_version"
+//    api "com.android.support:support-annotations:$support_version"
+//    api "com.android.support:support-fragment:$support_version"
+//    api 'com.android.support.constraint:constraint-layout:1.1.3'
+        api 'androidx.core:core-ktx:1.3.0'
+    api 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+//    androidTestImplementation 'androidx.annotation:annotation:1.1.0'
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
 
