--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,10 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion target_version
-//        versionCode 1
-//        versionName "1.0"
+
+        versionCode 5
+        versionName "1.2.1"
+
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
@@ -32,16 +34,17 @@ dependencies {
     //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    })
-    //    testCompile 'junit:junit:4.12'
-    api 'com.jaeger.statusbarutil:library:1.5.1'
+//    api 'com.jaeger.statusbarutil:library:1.5.1'
 
 //    api "com.android.support:appcompat-v7:$support_version"
 //    api "com.android.support:support-annotations:$support_version"
 //    api "com.android.support:support-fragment:$support_version"
 //    api 'com.android.support.constraint:constraint-layout:1.1.3'
-    api 'androidx.core:core-ktx:1.3.0'
-    api 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api "androidx.core:core-ktx:$ktx"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    api 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 //    androidTestImplementation 'androidx.annotation:annotation:1.1.0'
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
@@ -54,7 +57,6 @@ dependencies {
 
     //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
 
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    api 'jp.wasabeef:glide-transformations:3.0.1'
     //响应式编程
@@ -67,7 +69,7 @@ dependencies {
     api "com.google.code.gson:gson:$gson"
     //image
     //    compile 'com.github.bumptech.glide:compiler:4.5.0'
-    api 'com.squareup.okhttp3:okhttp:3.8.1'
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
     //在lifecycler onDestory 时自动解除订阅
@@ -78,3 +80,37 @@ dependencies {
 //repositories {
 //    mavenCentral()
 //}
+
+
+
+apply plugin: 'maven'
+
+ext {
+    // 从Github上clone下来的项目的本地地址
+    GITHUB_REPO_PATH = "/Users/AllenWang/Desktop/OoswantoO/Sagittarius/Practice/kbaselib"
+    // compile 'com.audienl:super_library:1.0.0'
+    PUBLISH_GROUP_ID = 'com.github.ooswantoo'
+    PUBLISH_ARTIFACT_ID = 'kbaselib'
+    PUBLISH_VERSION = '1.2.1'
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        def deployPath = file(project.GITHUB_REPO_PATH)
+        repository(url: "file://${deployPath.absolutePath}")
+        pom.project {
+            groupId project.PUBLISH_GROUP_ID
+            artifactId project.PUBLISH_ARTIFACT_ID
+            version project.PUBLISH_VERSION
+        }
+    }
+}
+
+// 源代码一起打包(不需要打包源代码的不要添加这几行)
+task androidSourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.sourceFiles
+}
+artifacts {
+    archives androidSourcesJar
+}
