--- a/build.gradle
+++ b/build.gradle
@@ -31,47 +31,45 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-    //        exclude group: 'com.android.support', module: 'support-annotations'
-    //    })
+    //commoon
+//    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
+    api 'androidx.appcompat:appcompat:1.2.0'
+    api 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    //    implementation 'com.github.bumptech.glide:glide:4.8.0'
+//    api 'jp.wasabeef:glide-transformations:3.0.1'
+
+
 //    api 'com.jaeger.statusbarutil:library:1.5.1'
 
-//    api "com.android.support:appcompat-v7:$support_version"
-//    api "com.android.support:support-annotations:$support_version"
-//    api "com.android.support:support-fragment:$support_version"
-//    api 'com.android.support.constraint:constraint-layout:1.1.3'
     api "androidx.core:core-ktx:$ktx"
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    api 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-//    androidTestImplementation 'androidx.annotation:annotation:1.1.0'
 
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
 
-    //    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    //    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    //    implementation 'com.android.support:cardview-v7:27.1.1'
-    //    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    //    compile 'com.android.support:percent:27.1.1'
 
-    //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
 
-//    implementation 'com.github.bumptech.glide:glide:4.8.0'
-//    api 'jp.wasabeef:glide-transformations:3.0.1'
-    //响应式编程
-//    api 'io.reactivex:rxjava:1.3.0'
+
+
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
-//    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
-//    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    //json解析
-    api "com.google.code.gson:gson:$gson"
-    //image
-    //    compile 'com.github.bumptech.glide:compiler:4.5.0'
+
+
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
+    //json解析
+    api "com.google.code.gson:gson:$gson"
+
+    //    compile 'com.ashokvarma.android:bottom-home_menu-bar:1.4.1'
+
+
+    //响应式编程
+//    api 'io.reactivex:rxjava:1.3.0'
+    //    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    //image
+    //    compile 'com.github.bumptech.glide:compiler:4.5.0'
     //在lifecycler onDestory 时自动解除订阅
 //    api 'com.uber.autodispose:autodispose:0.6.1'
 //    api 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
@@ -83,13 +81,13 @@ dependencies {
 
 
 
-apply plugin: 'maven'
+apply plugin: 'com.github.dcendents.android-maven'
 
 ext {
     // 从Github上clone下来的项目的本地地址
     GITHUB_REPO_PATH = "/Users/AllenWang/Desktop/OoswantoO/Sagittarius/Practice/kbaselib"
     // compile 'com.audienl:super_library:1.0.0'
-    PUBLISH_GROUP_ID = 'com.github.ooswantoo'
+    PUBLISH_GROUP_ID = 'edu.tjrac.swant'
     PUBLISH_ARTIFACT_ID = 'kbaselib'
     PUBLISH_VERSION = '1.2.1'
 }
