--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+buildscript{
+    ext{
+        compile_version = 30
+        tools_version ='30.0.2'
+        target_version = 30
+        kotlin_version ='1.4.21'
+        ktx = '1.3.2'
+        gson = '2.8.2'
+    }
+}
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
@@ -18,7 +29,7 @@ android {
         targetSdkVersion target_version
 
         versionCode 5
-        versionName "1.2.1"
+        versionName "1.2.3"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
@@ -85,34 +96,34 @@ dependencies {
 
 
 
-apply plugin: 'com.github.dcendents.android-maven'
-
-ext {
-    // 从Github上clone下来的项目的本地地址
-    GITHUB_REPO_PATH = "/Users/AllenWang/Desktop/OoswantoO/Sagittarius/Practice/kbaselib"
-    // compile 'com.audienl:super_library:1.0.0'
-    PUBLISH_GROUP_ID = 'edu.tjrac.swant'
-    PUBLISH_ARTIFACT_ID = 'kbaselib'
-    PUBLISH_VERSION = '1.2.1'
-}
-
-uploadArchives {
-    repositories.mavenDeployer {
-        def deployPath = file(project.GITHUB_REPO_PATH)
-        repository(url: "file://${deployPath.absolutePath}")
-        pom.project {
-            groupId project.PUBLISH_GROUP_ID
-            artifactId project.PUBLISH_ARTIFACT_ID
-            version project.PUBLISH_VERSION
-        }
-    }
-}
-
-// 源代码一起打包(不需要打包源代码的不要添加这几行)
-task androidSourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.sourceFiles
-}
-artifacts {
-    archives androidSourcesJar
-}
+//apply plugin: 'com.github.dcendents.android-maven'
+//
+//ext {
+//    // 从Github上clone下来的项目的本地地址
+//    GITHUB_REPO_PATH = "/Users/AllenWang/Desktop/OoswantoO/Sagittarius/Practice/kbaselib"
+//    // compile 'com.audienl:super_library:1.0.0'
+//    PUBLISH_GROUP_ID = 'edu.tjrac.swant'
+//    PUBLISH_ARTIFACT_ID = 'kbaselib'
+//    PUBLISH_VERSION = '1.2.1'
+//}
+//
+//uploadArchives {
+//    repositories.mavenDeployer {
+//        def deployPath = file(project.GITHUB_REPO_PATH)
+//        repository(url: "file://${deployPath.absolutePath}")
+//        pom.project {
+//            groupId project.PUBLISH_GROUP_ID
+//            artifactId project.PUBLISH_ARTIFACT_ID
+//            version project.PUBLISH_VERSION
+//        }
+//    }
+//}
+//
+//// 源代码一起打包(不需要打包源代码的不要添加这几行)
+//task androidSourcesJar(type: Jar) {
+//    classifier = 'sources'
+//    from android.sourceSets.main.java.sourceFiles
+//}
+//artifacts {
+//    archives androidSourcesJar
+//}
