--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript{
+    dependencies{
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
+    }
+}
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
@@ -8,6 +14,7 @@ android {
     buildToolsVersion '30.0.2'
     sourceSets {
         main.res.srcDirs += 'src/main/res_ui'
+//        main.assets.srcDirs += 'src/main/assets_tensorflow'
         main.jniLibs.srcDirs = ['libs']
     }
     defaultConfig {
