--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,13 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    api 'androidx.appcompat:appcompat:1.2.0'
+    api 'androidx.annotation:annotation:1.1.0'
+//    api 'androidx.navigation:navigation-fragment:2.3.2'
+    api 'androidx.navigation:navigation-fragment-ktx:2.3.2'
+
+    
     api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
